--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mongodb": "^5.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.9.1"
   }
 }
