--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
     "mongodb": "^5.1.0",
     "morgan": "^1.10.0",
